--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -1,8 +1,9 @@
 .btnmoj {
  background-color: $color-primary-light;
  color:$color-back;
- font-size: 1.7rem;
+ font-size: 1.3rem;
  border: none;
- width: 20%;
- padding: 10px;
+ width: 80%;
+ padding: 5px;
+ margin-left: 10px
 }
