--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,5 @@
 
-@import  "variables";
-@import  "basics";
-@import "buttons";
-@import "app";
+@import  'variables';
+@import  'basics';
+@import  'buttons';
+@import  'app';
