--- a/src/css/vesalica.css
+++ b/src/css/vesalica.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: 'IMMORTAL';
+  src: local("IMMORTAL"), url(../assets/fonts/IMMORTAL.ttf) format("woff"); }
+
 * {
   margin: 0;
   padding: 0; }
@@ -12,7 +16,7 @@ html {
   font-size: 62.5%; }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'IMMORTAL', sans-serif;
   font-weight: 400;
   line-height: 1.6;
   background-color: #420c34; }
