--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,7 +1,6 @@
-$color-primary:  rgb(66, 12, 52);
-$color-primary-light: #720D5D;
+$color-primary:  #f2f2f2;
+$color-primary-dark:  #ada3a3;
 $color-primary-verylight: rgb(165, 33, 139);
-$color-primary-dark: rgb(66, 12, 52);
 $color-win: rgb(35, 150, 35);
 $color-loss: #E30425;
 $color-back: #f2f2f2;
