--- a/src/sass/_basics.scss
+++ b/src/sass/_basics.scss
@@ -29,7 +29,7 @@ body {
     font-family: 'IMMORTAL', sans-serif;
     font-weight: 400;
     line-height: 1.6;
-    background-color: $color-primary;
+    background-color: white;
 
 }
 
