--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -1,33 +1,55 @@
-.btnmoj{
- background-color: $color-primary-light;
- color:$color-back;
- font-size: 1.3rem;
- border: none;
- width: 80%;
- padding: 5px;
- margin-left: 10px;
-
- &-slova{
-    background-color: $color-primary-light;
-    color:$color-back;
-    font-size: 1.3rem;
-    border: 1px solid $color-primary-dark;
-    width: 8%;
+.btnMy {
+    position: absolute;
+    bottom: 10%;
+    right: 30%;
+    border: none;
+    outline: none;
+    background-color: transparent;
+    color: white;
+    font-size: 2.3rem;
+    width: 150px;
     padding: 5px;
- }
+    transform: rotate(330deg);
+    transition: all 0.5s;
 
- &-slova:hover {
-    background-color: $color-primary-verylight;
-}
+    &:hover{
+        opacity: 0.7;
+    }
+}  
 
-&-slova-used {
-    background-color: $color-primary-verylight;
-    color:$color-primary-dark;
-    font-weight: 500;
-    font-size: 1.3rem;
-    border: 1px solid $color-primary-dark;
-    width: 8%;
-    padding: 5px;  
-}
+    .slova {
+        background-color: transparent;
+        color: $color-primary;
+        font-size: 2rem;
+        border-radius: 20%;
+        border: none;
+        outline: none;
+        width: 50px;
+        height: 50px;
+        padding: 2px;
 
+        &:hover {
+            background-color: $color-primary-dark;
+        }
+    }
+
+    .used {
+        opacity: 0.2;
+        background-color: transparent;
+        color: $color-primary-dark;
+        font-size: 2rem;
+        border-radius: 20%;
+        width: 50px;
+        height: 50px;
+        padding: 2px;
+       
+    }
+
+
+
+.container-btnLetters {
+    width: 70%;
+    min-height: 200px;
+    padding: 20px;
+    margin: 50px auto;
 }
