--- a/src/css/vesalica.css
+++ b/src/css/vesalica.css
@@ -35,7 +35,13 @@ body {
   width: 150px;
   padding: 5px;
   transform: rotate(330deg);
-  transition: all 0.5s; }
+  transition: all 0.5s;
+  z-index: 89; }
+  .btnMy-intro {
+    width: 150px;
+    height: 90px;
+    top: 30%;
+    right: 10%; }
   .btnMy:hover {
     opacity: 0.7; }
 
@@ -88,7 +94,7 @@ body {
   color: #f2f2f2;
   font-size: 3rem;
   text-align: center;
-  height: 65px;
+  height: 105px;
   width: 400px;
   margin: 50px auto; }
   .message-icon {
@@ -96,8 +102,18 @@ body {
     margin-right: 10px;
     font-size: 5rem; }
 
+.blink {
+  height: 50px;
+  margin-bottom: 30px; }
+
 .none {
   display: none; }
+
+@keyframes blinking {
+  0% {
+    opacity: 0.1; }
+  100% {
+    opacity: 1; } }
 
 .vesalo-container {
   position: relative;
@@ -229,10 +245,44 @@ body {
 
 .intro-container {
   position: absolute;
-  width: 90%;
-  height: 400px;
+  top: 0%;
+  left: 0%;
+  right: 0%;
+  bottom: 0%;
   color: white;
   font-size: 3rem;
   border: 1px solid white;
+  background-color: rgba(0, 0, 0, 0.856);
   margin: 0 auto;
-  padding: 100px; }
+  padding: 100px 200px;
+  z-index: 91; }
+
+text {
+  font-family: sans-serif;
+  stroke-dasharray: 100%;
+  stroke-dashoffset: 100%;
+  -webkit-animation: draw 8s forwards;
+  -moz-animation: draw 8s forwards;
+  -o-animation: draw 8s forwards;
+  -ms-animation: draw 8s forwards;
+  animation: draw 8s forwards; }
+
+@-webkit-keyframes draw {
+  100% {
+    stroke-dashoffset: 0; } }
+
+@-moz-keyframes draw {
+  100% {
+    stroke-dashoffset: 0; } }
+
+@-o-keyframes draw {
+  100% {
+    stroke-dashoffset: 0; } }
+
+@-ms-keyframes draw {
+  100% {
+    stroke-dashoffset: 0; } }
+
+@keyframes draw {
+  100% {
+    stroke-dashoffset: 0; } }
