--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -11,6 +11,14 @@
     padding: 5px;
     transform: rotate(330deg);
     transition: all 0.5s;
+    z-index: 89;
+
+    &-intro{
+        width: 150px;
+        height: 90px;
+        top: 30%;
+        right: 10%;
+    }
 
     &:hover{
         opacity: 0.7;
