--- a/src/sass/_intro.scss
+++ b/src/sass/_intro.scss
@@ -1,10 +1,14 @@
 .intro-container{
     position: absolute;
-    width: 90%;
-    height: 400px;
+    top: 0%;
+    left: 0%;
+    right: 0%;
+    bottom: 0%;
     color: white;
     font-size: 3rem;
     border: 1px solid white;
+    background-color: rgba(0, 0, 0, 0.856);
     margin: 0 auto;
-    padding: 100px;
+    padding: 100px 200px;
+    z-index: 91;
 }
