--- a/src/css/vesalica.css
+++ b/src/css/vesalica.css
@@ -25,7 +25,7 @@ body {
 ////////////////PRE SET/////////////////////////// */
 .btnMy {
   position: absolute;
-  bottom: 10%;
+  bottom: -15%;
   right: 30%;
   border: none;
   outline: none;
@@ -70,9 +70,9 @@ body {
 
 .container-btnLetters {
   width: 70%;
-  min-height: 200px;
+  min-height: 120px;
   padding: 20px;
-  margin: 50px auto; }
+  margin: 20px auto; }
 
 .main-container {
   position: relative;
@@ -117,9 +117,9 @@ body {
 
 .vesalo-container {
   position: relative;
-  height: 700px;
-  width: 100%;
-  margin-top: 100px;
+  height: 500px;
+  min-width: 100%;
+  margin-top: 10px;
   margin-right: 50px; }
 
 .vesalo-glava {
