--- a/src/sass/_vesalo.scss
+++ b/src/sass/_vesalo.scss
@@ -3,9 +3,9 @@
    .vesalo {
        &-container {
            position: relative;
-           height: 700px;
-           width: 100%;
-           margin-top: 100px;
+           height: 500px;
+           min-width: 100%;
+           margin-top: 10px;
            margin-right: 50px;
       }
    
