--- a/src/sass/_app.scss
+++ b/src/sass/_app.scss
@@ -2,10 +2,11 @@
     position: relative;
     background-image: url('../assets/img/videoblocks-school-board-chalk-text_hchp-cjtl_thumbnail-full01.png');
     background-repeat: no-repeat;
-    height: 900px;
-    width:99%;
+    min-height:900px;
+    max-width:100%;
     background-size: cover;
-    background-position: center;
+    background-position: 1px;
+  
 }
 .answerContainer{
     margin:50px auto;
@@ -34,6 +35,7 @@
     height: 50px;
     margin-bottom: 30px;
 }
+
 
 .none{
     display: none;
