--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -49,15 +49,13 @@
         border-radius: 20%;
         width: 50px;
         height: 50px;
-        padding: 2px;
-       
+        padding: 2px;  
     }
 
-
-
 .container-btnLetters {
-    width: 70%;
+    width: 100%;
     min-height: 120px;
-    padding: 20px;
+    padding: 20px 30px;
     margin: 20px auto;
+    text-align: center;
 }
