--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -2,9 +2,9 @@
     position: absolute;
     bottom: -15%;
     right: 30%;
-    border: none;
+    border: 1px dashed white;
     outline: none;
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0.26);
     color: white;
     font-size: 2.3rem;
     width: 150px;
@@ -12,6 +12,15 @@
     transform: rotate(330deg);
     transition: all 0.5s;
     z-index: 89;
+    
+    @media (max-width: 767.98px) { 
+        font-size: 2rem;
+        bottom: -5%;
+     }
+     @media (max-width: 575.98px) {
+        bottom: -5%;
+        transform: rotate(0deg);
+     }
 
     &-intro{
         width: 150px;
