--- a/src/sass/_app.scss
+++ b/src/sass/_app.scss
@@ -14,6 +14,13 @@
     font-size: 3rem;
     text-align: center;
     color: $color-primary;
+
+    @media (max-width: 767.98px) {
+        font-size: 2rem;
+     }
+     @media (max-width: 575.98px) {
+        font-size: 1.5rem;
+     }
 }
 
 .message {
@@ -23,6 +30,14 @@
     height: 105px;
     width: 400px;
     margin: 50px auto;
+    @media (max-width: 767.98px) {
+        font-size: 2rem;
+        width: 300px;
+     }
+     @media (max-width: 575.98px) {
+        font-size: 1.5rem;
+        width: 200px;
+     }
 
     &-icon{
         display: inline-block;
