--- a/src/sass/_crtice.scss
+++ b/src/sass/_crtice.scss
@@ -13,6 +13,14 @@
     animation-duration: 1.2s;
     animation-fill-mode: forwards;
     width: 10%;
+    @media (max-width: 767.98px) {
+        font-size: 2rem;
+        letter-spacing: 0.6rem;
+     }
+     @media (max-width: 575.98px) {
+        font-size: 1rem;
+        letter-spacing: 0.3rem;
+     }
 }
 
 .letters{
@@ -30,6 +38,12 @@
 .under-container{
     margin-top:-57px;
     height:10px;
+    @media (max-width: 767.98px) {
+        margin-top:-37px;
+     }
+     @media (max-width: 575.98px) {
+          margin-top:-30px;     
+     }
 }
 
 .under{
@@ -42,4 +56,13 @@
     color:white;
     font-size: 4rem;
     letter-spacing: 1rem;
+
+    @media (max-width: 767.98px) {
+        font-size: 2rem;
+        letter-spacing: 0.6rem;
+     }
+     @media (max-width: 575.98px) { 
+        font-size: 1rem;
+        letter-spacing: 0.3rem;
+     }
 }
