--- a/src/sass/_app.scss
+++ b/src/sass/_app.scss
@@ -5,7 +5,7 @@
     min-height:900px;
     max-width:100%;
     background-size: cover;
-    background-position: 1px;
+    background-position: left;
   
 }
 .answerContainer{
