--- a/src/sass/_intro.scss
+++ b/src/sass/_intro.scss
@@ -7,7 +7,7 @@
     color: white;
     font-size: 3rem;
     border: 1px solid white;
-    background-color: rgba(0, 0, 0, 0.856);
+   // background-color: rgba(0, 0, 0, 0.856);
     margin: 0 auto;
     padding: 100px 200px;
     z-index: 91;
