--- a/src/sass/_app.scss
+++ b/src/sass/_app.scss
@@ -4,6 +4,7 @@
     background-repeat: no-repeat;
     min-height:900px;
     max-width:100%;
+    overflow: hidden;
     background-size: cover;
     background-position: left;
   
