--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -62,7 +62,7 @@
     }
 
 .container-btnLetters {
-    width: 100%;
+    min-width: 90%;
     min-height: 120px;
     padding: 20px 30px;
     margin: 20px auto;
