--- a/src/css/vesalica.css
+++ b/src/css/vesalica.css
@@ -77,7 +77,7 @@ body {
   padding: 2px; }
 
 .container-btnLetters {
-  width: 100%;
+  min-width: 90%;
   min-height: 120px;
   padding: 20px 30px;
   margin: 20px auto;
@@ -89,6 +89,7 @@ body {
   background-repeat: no-repeat;
   min-height: 900px;
   max-width: 100%;
+  overflow: hidden;
   background-size: cover;
   background-position: left; }
 
@@ -137,12 +138,6 @@ body {
     opacity: 0.1; }
   100% {
     opacity: 1; } }
-
-.myCanvas {
-  position: relative;
-  border: 2px solid red;
-  background-color: red;
-  z-index: 100; }
 
 .vesalo-container {
   position: relative;
@@ -318,36 +313,20 @@ body {
   color: white;
   font-size: 3rem;
   border: 1px solid white;
+  background-color: rgba(0, 0, 0, 0.856);
   margin: 0 auto;
   padding: 100px 200px;
   z-index: 91; }
 
-text {
-  font-family: sans-serif;
-  stroke-dasharray: 100%;
-  stroke-dashoffset: 100%;
-  -webkit-animation: draw 8s forwards;
-  -moz-animation: draw 8s forwards;
-  -o-animation: draw 8s forwards;
-  -ms-animation: draw 8s forwards;
-  animation: draw 8s forwards; }
-
-@-webkit-keyframes draw {
-  100% {
-    stroke-dashoffset: 0; } }
-
-@-moz-keyframes draw {
-  100% {
-    stroke-dashoffset: 0; } }
-
-@-o-keyframes draw {
-  100% {
-    stroke-dashoffset: 0; } }
-
-@-ms-keyframes draw {
-  100% {
-    stroke-dashoffset: 0; } }
-
-@keyframes draw {
-  100% {
-    stroke-dashoffset: 0; } }
+.canvas {
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  margin-right: 80px;
+  padding-right: 250px; }
+  .canvas-container {
+    position: relative;
+    margin-left: -50px;
+    width: 100%;
+    height: 100%;
+    border: 2px solid red; }
