--- a/src/css/vesalica.css
+++ b/src/css/vesalica.css
@@ -43,7 +43,7 @@ body {
       bottom: -5%; } }
   @media (max-width: 575.98px) {
     .btnMy {
-      bottom: -5%;
+      bottom: 20%;
       transform: rotate(0deg); } }
   .btnMy-intro {
     width: 150px;
@@ -317,16 +317,41 @@ body {
   margin: 0 auto;
   padding: 100px 200px;
   z-index: 91; }
+  @media (max-width: 767.98px) {
+    .intro-container {
+      font-size: 2rem;
+      padding: 50px 100px; }
+      .intro-container h1 {
+        font-size: 2rem; } }
+  @media (max-width: 575.98px) {
+    .intro-container {
+      font-size: 1.5rem;
+      padding: 25px 50px; }
+      .intro-container h1 {
+        font-size: 1.5rem; } }
 
 .canvas {
   position: absolute;
   top: 0%;
   left: 0%;
-  margin-right: 80px;
-  padding-right: 250px; }
+  margin-right: 80px; }
+  @media (max-width: 767.98px) {
+    .canvas {
+      width: 90%;
+      margin-right: 40px; } }
+  @media (max-width: 575.98px) {
+    .canvas {
+      width: 90%;
+      margin-right: 5px; } }
   .canvas-container {
     position: relative;
     margin-left: -50px;
     width: 100%;
-    height: 100%;
+    height: 600px;
     border: 2px solid red; }
+    @media (max-width: 767.98px) {
+      .canvas-container {
+        height: 400px; } }
+    @media (max-width: 575.98px) {
+      .canvas-container {
+        height: 200px; } }
