--- a/src/sass/_drawing.scss
+++ b/src/sass/_drawing.scss
@@ -1,14 +1,33 @@
 .canvas {
-  &-container{
-    position: relative;
-    margin-left: -50px;
-    width: 100%;
-    height: 100%;
-    border: 2px solid red;
-  }
   position: absolute;
   top: 0%;
   left: 0%;
   margin-right: 80px;
-  padding-right: 250px;
+ 
+  @media (max-width: 767.98px) {
+    width: 90%;
+    margin-right: 40px;
+ }
+
+ @media (max-width: 575.98px) {
+  width: 90%;
+  margin-right: 5px;
+ }
+
+ &-container{
+  position: relative;
+  margin-left: -50px;
+  width: 100%;
+  height: 600px;
+  border: 2px solid red;
+  @media (max-width: 767.98px) {
+    height: 400px;
+ }
+
+ @media (max-width: 575.98px) {
+  height: 200px;
+ }
+ 
+}
+
 }
