--- a/src/sass/_intro.scss
+++ b/src/sass/_intro.scss
@@ -11,4 +11,19 @@
     margin: 0 auto;
     padding: 100px 200px;
     z-index: 91;
+
+    @media (max-width: 767.98px) {
+        font-size: 2rem;
+        padding: 50px 100px;
+        h1{
+            font-size: 2rem;
+        }
+     }
+     @media (max-width: 575.98px) {
+        font-size: 1.5rem;
+        padding: 25px 50px;
+        h1{
+            font-size: 1.5rem;
+        }
+     }
 }
