--- a/src/sass/_app.scss
+++ b/src/sass/_app.scss
@@ -2,11 +2,21 @@
     position: relative;
     background-image: url('../assets/img/videoblocks-school-board-chalk-text_hchp-cjtl_thumbnail-full01.png');
     background-repeat: no-repeat;
-    min-height:900px;
+    height:750px;
     max-width:100%;
     overflow: hidden;
     background-size: cover;
     background-position: left;
+    border:1px solid green;
+    @media (max-width: 767.98px) {
+        font-size: 2rem;
+        height:700px;
+     }
+     @media (max-width: 575.98px) {
+        font-size: 1.2rem;
+        margin:2px auto;
+        height:600px;
+     }
   
 }
 .answerContainer{
@@ -20,7 +30,8 @@
         font-size: 2rem;
      }
      @media (max-width: 575.98px) {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
+        margin:2px auto;
      }
 }
 
@@ -36,8 +47,9 @@
         width: 300px;
      }
      @media (max-width: 575.98px) {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         width: 200px;
+        height: 55px;
      }
 
     &-icon{
