--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -1,7 +1,7 @@
 .btnMy {
     position: absolute;
-    bottom: -15%;
-    right: 30%;
+    bottom: -17%;
+   left:30%;
     border: 1px dashed white;
     outline: none;
     background-color: rgba(255, 255, 255, 0.26);
@@ -12,14 +12,14 @@
     transform: rotate(330deg);
     transition: all 0.5s;
     z-index: 89;
-   
-    
+
     @media (max-width: 767.98px) { 
         font-size: 2rem;
-        bottom: -5%;
+        bottom: -15%;
+        left:30%;
      }
      @media (max-width: 575.98px) {
-        bottom: 20%;
+        bottom: -20%;
         transform: rotate(0deg);
      }
 
@@ -45,6 +45,16 @@
         width: 50px;
         height: 50px;
         padding: 2px;
+        @media (max-width: 767.98px) { 
+            font-size: 1.4rem;
+            width: 40px;
+            height: 40px;
+         }
+         @media (max-width: 575.98px) {
+            font-size: 1rem;
+            width: 30px;
+            height: 30px;
+         }
 
         &:hover {
             background-color: $color-primary-dark;
@@ -60,6 +70,16 @@
         width: 50px;
         height: 50px;
         padding: 2px;  
+        @media (max-width: 767.98px) { 
+            font-size: 1.4rem;
+            width: 40px;
+            height: 40px;
+         }
+         @media (max-width: 575.98px) {
+            font-size: 1rem;
+            width: 30px;
+            height: 30px;
+         }
     }
 
 .container-btnLetters {
@@ -68,6 +88,9 @@
     padding: 20px 30px;
     margin: 20px auto;
     text-align: center;
+    @media (max-width: 575.98px) {
+        margin: 2px auto;
+     }
 }
 
 .test{
