--- a/src/sass/_drawing.scss
+++ b/src/sass/_drawing.scss
@@ -1,33 +1,31 @@
 .canvas {
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  margin-right: 80px;
+width: 100%;
+height: 100%;
  
   @media (max-width: 767.98px) {
-    width: 90%;
     margin-right: 40px;
  }
 
  @media (max-width: 575.98px) {
-  width: 90%;
-  margin-right: 5px;
+  margin-right:5px;
  }
 
- &-container{
-  position: relative;
-  margin-left: -50px;
-  width: 100%;
-  height: 600px;
-  border: 2px solid red;
-  @media (max-width: 767.98px) {
-    height: 400px;
- }
+    &-container{
+      margin-right: 40px;
+      height: 400px;
+      width:266.66666px;
+      border: 2px solid red;
 
- @media (max-width: 575.98px) {
-  height: 200px;
- }
- 
-}
+      @media (max-width: 767.98px) {
+   
+      margin-right: 10px;
+    }
+    @media (max-width: 575.98px) {
+      height: 300px;
+      width:200px;
+      margin-right: 10px;
+    }
+    
+    }
 
 }
