--- a/src/css/vesalica.css
+++ b/src/css/vesalica.css
@@ -45,11 +45,12 @@ body {
   @media (max-width: 575.98px) {
     .btnMy {
       bottom: -20%;
-      transform: rotate(0deg); } }
+      transform: rotate(0deg);
+      left: 0%; } }
   .btnMy-intro {
     width: 150px;
     height: 90px;
-    top: 30%;
+    top: 50%;
     right: 10%; }
   .btnMy:hover {
     opacity: 0.7; }
@@ -276,8 +277,7 @@ body {
   .canvas-container {
     margin-right: 40px;
     height: 400px;
-    width: 266.66666px;
-    border: 2px solid red; }
+    width: 266.66666px; }
     @media (max-width: 767.98px) {
       .canvas-container {
         margin-right: 10px; } }
