--- a/src/sass/_drawing.scss
+++ b/src/sass/_drawing.scss
@@ -1,31 +1,33 @@
 .canvas {
-width: 100%;
-height: 100%;
- 
+  width: 100%;
+  height: 100%;
+
   @media (max-width: 767.98px) {
     margin-right: 40px;
- }
+  }
 
- @media (max-width: 575.98px) {
-  margin-right:5px;
- }
+  @media (max-width: 575.98px) {
+    margin-right: 5px;
+  }
 
-    &-container{
-      margin-right: 40px;
+  &-container {
+    margin-right: 40px;
+    height: 600px;
+    width: 400px;
+
+
+    @media (max-width: 767.98px) {
       height: 400px;
-      width:266.66666px;
-    
-
-      @media (max-width: 767.98px) {
-   
+      width: 266.66666px;
       margin-right: 10px;
     }
+
     @media (max-width: 575.98px) {
       height: 300px;
-      width:200px;
+      width: 200px;
       margin-right: 10px;
     }
-    
-    }
+
+  }
 
 }
