--- a/src/css/vesalica.css
+++ b/src/css/vesalica.css
@@ -121,15 +121,14 @@ body {
   position: relative;
   background-image: url("../assets/img/videoblocks-school-board-chalk-text_hchp-cjtl_thumbnail-full01.png");
   background-repeat: no-repeat;
-  height: 900px;
+  height: 938px;
   max-width: 100%;
   overflow: hidden;
   background-size: cover;
-  background-position: left;
-  border: 1px solid green; }
+  background-position: left; }
   @media (max-width: 991.98px) {
     .main-container {
-      height: 900px; } }
+      height: 723px; } }
   @media (max-width: 767.98px) {
     .main-container {
       font-size: 2rem;
