--- a/src/css/vesalica.css
+++ b/src/css/vesalica.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: 'IMMORTAL';
-  src: local("IMMORTAL"), url(../assets/fonts/IMMORTAL.ttf) format("woff"); }
+  font-family: 'Eraser';
+  src: local("Eraser"), url(../assets/fonts/Eraser.ttf) format("woff"); }
 
 * {
   margin: 0;
@@ -16,7 +16,7 @@ html {
   font-size: 62.5%; }
 
 body {
-  font-family: 'IMMORTAL', sans-serif;
+  font-family: 'Eraser', sans-serif;
   font-weight: 400;
   line-height: 1.6;
   background-color: white; }
@@ -284,6 +284,11 @@ body {
     margin-right: 40px;
     height: 600px;
     width: 400px; }
+    @media (max-width: 998.98px) {
+      .canvas-container {
+        height: 500px;
+        width: 350.66666px;
+        margin-right: 10px; } }
     @media (max-width: 767.98px) {
       .canvas-container {
         height: 400px;
