--- a/src/sass/_drawing.scss
+++ b/src/sass/_drawing.scss
@@ -14,6 +14,11 @@
     margin-right: 40px;
     height: 600px;
     width: 400px;
+    @media (max-width: 998.98px) {
+      height: 500px;
+      width: 350.66666px;
+      margin-right: 10px;
+    }
 
 
     @media (max-width: 767.98px) {
