--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -1,7 +1,7 @@
 .btnMy {
-    position: absolute;
-    bottom: -4%;
-    left:60%;
+   margin-left:50%;
+   transform: translateX(-50%);
+   margin-bottom: 20px;
     border: 1px dashed white;
     outline: none;
     background-color: rgba(255, 255, 255, 0.26);
@@ -9,22 +9,29 @@
     font-size: 2.3rem;
     width: 150px;
     padding: 5px;
-    transform: rotate(330deg);
+    
     transition: all 0.5s;
     z-index: 89;
+
+    @media (max-width: 1300px) {
+        margin-left:50%;
+        transform: translateX(-50%);
+     }
     @media (max-width: 991.98px) {
-        bottom: -4%;
-        left:50%;
+        margin-left:50%;
+         transform: translateX(-50%);
      }
     @media (max-width: 767.98px) { 
         font-size: 2rem;
-        bottom: -15%;
-        left:30%;
+        margin-left:50%;
+         transform: translateX(-50%);
+        width: 120px;
      }
      @media (max-width: 575.98px) {
-        bottom: -20%;
-        transform: rotate(0deg);
-        left:0%;
+        margin-left:50%;
+         transform: translateX(-50%);
+        font-size: 1.7rem;
+        width: 100px;
      }
 
     &-intro{
@@ -90,7 +97,7 @@
     min-width: 90%;
     min-height: 120px;
     padding: 20px 30px;
-    margin: 20px auto;
+    margin: 10px auto;
     text-align: center;
     @media (max-width: 575.98px) {
         margin: 2px auto;
