--- a/src/sass/_drawing.scss
+++ b/src/sass/_drawing.scss
@@ -12,17 +12,23 @@
 
   &-container {
     margin-right: 40px;
-    height: 600px;
-    width: 400px;
-    @media (max-width: 998.98px) {
-      height: 500px;
-      width: 350.66666px;
+    height: 500px;
+    width: 300px;
+
+    @media (max-width: 1300px) {
+      height: 350px;
+      width: 240px;
       margin-right: 10px;
     }
 
+    @media (max-width: 998.98px) {
+      height: 350px;
+      width: 240px;
+      margin-right: 10px;
+    }
 
     @media (max-width: 767.98px) {
-      height: 400px;
+      height: 350px;
       width: 266.66666px;
       margin-right: 10px;
     }
