--- a/src/sass/_app.scss
+++ b/src/sass/_app.scss
@@ -17,13 +17,17 @@
      }
      @media (max-width: 575.98px) {
         font-size: 1.2rem;
-      
+     }
+
+     .sub-container{
+         height: 83%;
+         width: 100%;
      }
   
 }
 .answerContainer{
     margin:50px auto;
-    height: 90px;
+    height: 50px;
     font-size: 2rem;
     text-align: center;
     color: $color-primary;
@@ -33,7 +37,7 @@
      }
      @media (max-width: 575.98px) {
         font-size: 1.2rem;
-        margin:60px auto;
+        margin:30px auto;
        
      }
 }
@@ -45,6 +49,7 @@
     height: 105px;
     width: 400px;
     margin: 10px auto;
+    letter-spacing: 1.3rem;
     @media (max-width: 767.98px) {
         font-size: 1.5rem;
         width: 300px;
@@ -59,12 +64,21 @@
         display: inline-block;
         margin-right: 10px;
         font-size: 5rem;
+        @media (max-width: 575.98px) {
+            font-size: 2.5rem;
+            
+         }
     }
 
 }
 .blink{
     height: 50px;
     margin-bottom: 30px;
+    @media (max-width: 575.98px) {
+        font-size: 1rem;
+        height: 40px;
+        margin-bottom: 15px;
+     }
 }
 
 
