--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -60,11 +60,13 @@
             font-size: 1.4rem;
             width: 40px;
             height: 40px;
+            padding: 1px;
          }
          @media (max-width: 575.98px) {
-            font-size: 1rem;
+            font-size: 1.1rem;
             width: 30px;
             height: 30px;
+            padding: 0px;
          }
 
         &:hover {
