--- a/src/sass/_crtice.scss
+++ b/src/sass/_crtice.scss
@@ -9,29 +9,26 @@
 
 .crtice{
     display: inline-block;
-    width: 10%;
+    width: 9%;
+    font-size: 4rem;
     @media (max-width: 767.98px) {
-        font-size: 2rem;
-        letter-spacing: 0.4rem;
+        width: 8%;
+        font-size: 3rem;
+        letter-spacing: 0.2rem;
      }
      @media (max-width: 575.98px) {
-        font-size: 1rem;
+        width: 7%;
+        font-size: 2rem;
         letter-spacing: 0.2rem;
      }
 }
 
-.letters{
-    color: $color-back;
-    font-size: 1.3rem;
-
-   &-zagonetka{
+.letters-zagonetka{
     color: $color-back;
     font-size: 3rem;
-    letter-spacing: 1rem;
-  
-  
+    letter-spacing: 0.2rem;
 }
 
-}
+
 
 
